<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antenna_pkg</name>
  <version>0.0.0</version>
  <description>Tracking antenna ROS node</description>
  <maintainer email="rjm0037@uah.edu">Riley McLain</maintainer>
  <license>AGPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>python3-serial</depend>

  <build_depend>black</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
